# secure-telegram-client

./: .dockerignore  .env.example  .env.local  .gitignore  100_PERCENT_READY.md  ALL_FEATURES_IMPLEMENTED.md  API_KEYS_GUIDE.md  APK_BUILD.md  APK_BUILD_SUCCESS.md  APK_INFO.md  ARCHITECTURE.md  AUDIT.md  AUDIT_REPORT.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CHECKLIST.md  CI_CD_STATUS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DISCLAIMER.md  DOWNLOAD.md  Dockerfile  ENV_LOCAL_GUIDE.md  FINAL_PUSH.md  FINAL_PUSH_REPORT.md  FINAL_SUMMARY.md  FIXES_COMPLETED.md  GITHUB_ANONYMIZATION.md  GITHUB_RELEASE_INSTRUCTION.md  GIT_COMMIT_GUIDE.md  GRADLE_WRAPPER_ADDED.md  HOW_TO_RUN_CI.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_FINAL.md  INSTALL_FLUTTER.md  LICENSE  MOBILE_100_PERCENT.md  NEW_FEATURES.md  OPENCLAW_TASK.md  (+28 more)
.github/: FUNDING.yml
admin/: Cargo.toml  README.md
admin/src/: api.rs  auth.rs  main.rs  templates.rs
ai-accountant-kz/: .env.example  .env.tax-api.example  .gitignore  Dockerfile  Dockerfile.production  README.md  docker-compose.tax-api.yml  docker-compose.yml  pyproject.toml  requirements.tax-api.txt  requirements.txt
android/: .gitignore  APK_BUILD_INFO.md  APP_STORES.md  BUILD_INSTRUCTIONS.md  CHANGELOG-v0.2.0.md  GITHUB_ACTIONS.md  GREEN_BUILD.md  IMPLEMENTATION_REPORT.md  PUBLISH_APTOIDE.md  README.md  app-fdroid-release-signed.apk  app-fdroid-release-signed.apk.idsig  build-apk.sh  build.gradle.kts  fdroid-metadata.yml  gradlew  local.properties  settings.gradle.kts
android/core/: Cargo.toml
android/core/src/: lib.rs  transport.rs  updater.rs
benches/: crypto_bench.rs
bots/: Cargo.toml  README.md
bots/src/: api.rs  bot_engine.rs  builder.rs  ipfs.rs  main.rs
cloudflare/: CONFIGURATION.md
desktop-v2/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
desktop-v2/scripts/: build.sh  io.secure-telegram.desktop  postinstall.sh  preinstall.sh  preremove.sh
desktop-v2/src/: commands.rs  crypto.rs  db.rs  main.rs  p2p.rs
docs/: ADS_FINAL_REPORT.md  ADS_IMPLEMENTATION_SUMMARY.md  ADS_MODULE.md  API.md  DEPLOYMENT.md  GITHUB_ACTIONS_ANDROID.md  INSTALL.md  PHASE1_REPORT.md  README.md  SECURITY.md  SELF_HOSTING.md  SMART_CONTRACTS_REPORT.md  USER_GUIDE.md  (+2 more)
enterprise/: .gitignore  Cargo.toml  README.md
enterprise/config/: config.toml  sso.toml
enterprise/scripts/: build.sh
enterprise/src/: admin.rs  api.rs  audit.rs  compliance.rs  main.rs  sso.rs
liberty-reach/: Cargo.toml  README.md  SECURITY.md  WHITEPAPER.md
liberty-reach-core/: Cargo.toml  README.md  build.rs
liberty-reach-core/src/: ai.rs  bots.rs  bridge.rs  config.rs  crypto.rs  engine.rs  ffi.rs  lib.rs  media.rs  obfuscation.rs  p2p.rs  sip.rs  storage.rs  web3.rs  webrtc.rs
liberty-reach/src/: admin.rs  ai.rs  ai_fleet.rs  bridge.rs  calls.rs  crypto.rs  exchange.rs  governance.rs  groups.rs  identity.rs  main.rs  network.rs  ratchet.rs  storage.rs  stories.rs  voice.rs  wallet.rs
messenger/: .env.example  Capfile.toml  Cargo.toml  tauri.conf.json
messenger/src/: e2e.rs  index.html  lib.rs  main.rs
messenger/src-tauri/: Cargo.toml  tauri.conf.json
messenger/src-tauri/capabilities/: default.json
messenger/src-tauri/crypto/: Cargo.toml
messenger/src-tauri/crypto/src/: error.rs  hmac.rs  hybrid_encrypt.rs  keypair.rs  lib.rs  password.rs  secure_random.rs  signature.rs
messenger/src-tauri/src/: lib.rs  main.rs  p2p.rs  state.rs  storage.rs
messenger/src-tauri/src/commands/: chat.rs  crypto.rs  mod.rs  user.rs
messenger/src-tauri/src/crypto/: mod.rs
messenger/src-tauri/steganography/: Cargo.toml
messenger/src-tauri/steganography/src/: lib.rs
messenger/src/ads/: commands.rs  engine.rs  fetch.rs  mod.rs
messenger/src/ai/: README.md  assistant.rs  client.rs  code_generator.rs  mod.rs  speech_to_text.rs  subtitles.rs  summarizer.rs  text_to_speech.rs  translator.rs
messenger/src/ai/providers/: anthropic.rs  mod.rs  ollama.rs  openrouter.rs
messenger/src/antispam/: mod.rs
messenger/src/auth/: keychain.rs  mod.rs
messenger/src/cdn/: mod.rs
messenger/src/chat/: channel.rs  group.rs  integration.rs  mod.rs  private.rs
messenger/src/commands/: mod.rs
messenger/src/crypto/: constants.rs  double_ratchet.rs  hybrid.rs  mod.rs  pqcrypto.rs  steganography.rs
messenger/src/monetization/: mod.rs
messenger/src/mtproto/: mod.rs
messenger/src/offline/: bluetooth.rs  mesh.rs  mod.rs  obfuscation.rs  tor_transport.rs  transport_router.rs  wifi_direct.rs  wifi_lan.rs
messenger/src/p2p/: libp2p.rs  mod.rs
messenger/src/queue/: mod.rs
messenger/src/storage/: ipfs.rs  mod.rs
messenger/src/telegram/: importer.rs  migration.rs  mod.rs  whatsapp_importer.rs
messenger/src/transport/: cloudflare.rs  mod.rs  router.rs  telegram_bot.rs
messenger/src/web3/: 0x_swap.rs  ABCEX_EXAMPLES.md  ABCEX_INTEGRATION.md  ABCEX_MODULE.md  ABCEX_README.md  ABCEX_SUMMARY.md  ABCEX_TYPES.md  EXCHANGE_MODULE.md  EXCHANGE_SUMMARY.md  SWAP_EXAMPLES.md  SWAP_MODULE.md  SWAP_README.md  SWAP_SUMMARY.md  abcex.rs  abcex_commands.rs  bitget.rs  bitget_commands.rs  ens.rs  fee_splitter.rs  fee_splitter_commands.rs  metamask.rs  mod.rs  p2p_escrow.rs  p2p_escrow_commands.rs  swap_commands.rs  swap_types.ts  tokens.rs  transaction_commands.rs  transactions.rs  wallet.rs  zerox_swap.rs
messenger/src/webrtc/: conference.rs  mod.rs  translator.rs  walkie_talkie.rs
server/: .env.production  Cargo.toml
server/migrations/: bot_platform.sql  payment_system.sql
server/src/: auth.rs  db.rs  e2ee.rs  lib.rs  main.rs  middleware.rs  websocket.rs  ws.rs
server/src/api/: ai.rs  auth.rs  chats.rs  extra.rs  features.rs  files.rs  messages.rs  mod.rs  nodes.rs  users.rs  web3.rs
server/src/enterprise/: admin.rs  audit.rs  compliance.rs  mod.rs  sso.rs
server/src/middleware/: auth.rs  logging.rs  metrics.rs  rate_limit.rs
server/src/models/: bot.rs  chat.rs  file.rs  message.rs  user.rs  ws.rs
server/src/routes/: bots.rs  chats.rs  files.rs  health.rs  messages.rs  mod.rs  payments.rs  stories.rs  users.rs  ws.rs
server/tests/: api_test.rs  auth_test.rs
(+360 files in other folders)
