[package]
name = "secure-telegram-client"
version = "0.2.0"
edition = "2021"
authors = ["Secure Telegram Team"]
description = "Decentralized Telegram client with post-quantum encryption, anti-censorship and P2P fallback"
license = "MIT"
repository = "https://github.com/secure-telegram-team/secure-telegram-client"
keywords = ["telegram", "privacy", "anti-censorship", "p2p", "encryption"]
categories = ["network-programming", "cryptography", "command-line-utilities"]

[dependencies]
# TDLib bindings (официальная библиотека Telegram)
tdlib = "0.10.0"

# === Криптография ===
# Post-quantum cryptography (Kyber-1024)
pqcrypto-kyber = "0.7.0"
# Symmetric encryption (XChaCha20-Poly1305)
chacha20poly1305 = "0.10"
# Key exchange (X25519 Diffie-Hellman)
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
# Digital signatures (Ed25519 для подписи релизов)
ed25519-dalek = { version = "2.0", features = ["serde"] }
# SHA-3 для obfs4 keystream
sha3 = "0.10"
# HKDF для ключей
hkdf = "0.12"
sha2 = "0.10"

# === P2P и децентрализация ===
# libp2p для P2P коммуникации
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "gossipsub", "mdns", "quic", "plaintext"] }
# IPFS для децентрализованного хранения
ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-rustls"] }
hyper = { version = "0.14", features = ["full"] }
http-body = "0.4"

# === Pluggable Transports ===
# Shadowsocks криптография
shadowsocks-crypto = "0.6"
# utls для подмены TLS fingerprint (TODO: реализовать)
# webpki = "0.22"

# === Сеть и прокси ===
# HTTP client с поддержкой прокси
reqwest = { version = "0.11", features = ["json", "socks", "rustls-tls"] }
# Tokio socks для SOCKS5 прокси
tokio-socks = "0.5"
# MTProto прокси (заглушка для будущей реализации)
# mtproto-proxy = "0.1" # TODO: добавить когда будет доступен

# === Async runtime ===
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# === База данных ===
# SQLite с шифрованием
rusqlite = { version = "0.29", features = ["bundled-sqlcipher"] }
# Время для очередей
chrono = { version = "0.4", features = ["serde"] }

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# === Random generation ===
rand = "0.8"
rand_chacha = "0.3"
getrandom = "0.2"  # Ограничено до 0.2 для совместимости

# === Image processing ===
image = "0.24"
imageproc = "0.23"

# === Logging ===
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# === Error handling ===
thiserror = "1.0"
anyhow = "1.0"

# === Directories ===
dirs = "5.0"

# === Utilities ===
hex = "0.4"
base64 = "0.21"
bytes = "1.5"

# === Auto-update (резервный механизм) ===
self_update = { version = "0.37", features = ["archive-zip"] }

# === DNS over HTTPS (для обхода DNS блокировок) ===
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls"] }

[features]
default = []
steganography = []

[lib]
name = "secure_telegram_client"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.9"  # Ограничено для совместимости

[[bench]]
name = "crypto_bench"
harness = false

[[bin]]
name = "secure-tg"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
