# Liberty Reach Messenger v2.0 - Universal Resilient Edition
# Workspace Configuration - MINIMAL WORKING VERSION

[workspace]
members = [
    "liberty-reach",
    "liberty-reach-core",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Liberty Reach Team <zametkikostik@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# Cryptography
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
aes = "0.8"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
argon2 = "0.5"
hmac = "0.12"
hkdf = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
rand_chacha = "0.3"

# Digital Signatures
ed25519-dalek = "2.1"
x25519-dalek = "2.0"

# JWT & Auth
jsonwebtoken = "9"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4"

# Database (Encrypted)
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"
dotenv = "0.15"

# FFI Bridge (Flutter)
flutter_rust_bridge = "2.0"

# Logging & Error Handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"

# Network
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Image Processing (Steganography)
image = "0.24"

# Compression
flate2 = "1.0"

# System & Platform
dirs = "5.0"
whoami = "1.4"

# Testing
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"
tempfile = "3.9"

# Build dependencies
cc = "1.0"
cbindgen = "0.26"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
