[package]
name = "secure-telegram-admin"
version = "1.0.0"
edition = "2021"
authors = ["Secure Telegram Team"]
description = "Admin Panel - User management, verification, moderation"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Templates
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
argon2 = "0.5"
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["cookie"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Anyhow
anyhow = "1.0"

# Templates
askama = "0.12"
askama_axum = "0.4"
