[package]
name = "secure-telegram-bots"
version = "1.0.0"
edition = "2021"
authors = ["Secure Telegram Team"]
description = "Bot Platform - BotFather + ManyChat analog"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Crypto
ring = "0.17"

# Rand
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Anyhow
anyhow = "1.0"

# JWT
jsonwebtoken = "9.2"

# IPFS Pinata
pinata-sdk = "2.0"

# Template engine
tera = "1.19"

# Regex
regex = "1.10"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
