[package]
name = "secure-telegram-enterprise"
version = "1.0.0"
edition = "2021"
authors = ["Secure Telegram Team"]
description = "Secure Telegram Enterprise - Корпоративная версия с SSO, аудитом и администрированием"
license = "Commercial"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }

# SSO & Authentication
oauth2 = "4.4"
openidconnect = "3.5"
jsonwebtoken = "9.2"
argon2 = "0.5"

# LDAP
ldap3 = "0.11"

# SAML
saml2 = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "cluster"] }

# Audit logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Encryption
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
pqcrypto-kyber = "0.1"

# PDF generation
printpdf = "0.6"

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls"] }

# Monitoring
prometheus = "0.13"
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry-otlp = "0.14"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
fake = { version = "2.9", features = ["derive"] }

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true
