[package]
name = "liberty-reach"
version = "1.0.0"
edition = "2021"
authors = ["Liberty Reach Team"]
description = "Decentralized AI-powered messenger"

[dependencies]
# Async
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# P2P
libp2p = { version = "0.53", features = ["tcp", "quic", "noise", "yamux", "kad", "gossipsub", "mdns"] }

# UI (Tauri с поддержкой мобильных устройств)
tauri = { version = "2.0", features = ["devtools"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
pqcrypto-kyber = "0.8"
aes-gcm = "0.10"
ed25519-dalek = "2.1"
sha2 = "0.10"
hex = "0.4"

# Audio/Video
webrtc = "0.9"
cpal = "0.15"
hound = "3.5"

# Speech
vosk = "0.3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4"] }
base64 = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Image processing (для стеганографии)
image = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
