[package]
name = "secure-messenger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Secure Telegram Client — Desktop application with post-quantum E2EE"

[dependencies]
# Tauri
tauri.workspace = true
tauri-plugin-store.workspace = true
tauri-plugin-shell.workspace = true

# Post-Quantum Crypto
oqs.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
ed25519-dalek.workspace = true
sha3.workspace = true
hmac.workspace = true
hkdf.workspace = true
zeroize.workspace = true
subtle.workspace = true
rand.workspace = true

# Utils
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
hex.workspace = true
base64.workspace = true
image.workspace = true

# Keychain
keyring.workspace = true

# P2P Networking
libp2p.workspace = true
async-std.workspace = true
futures.workspace = true
unsigned-varint.workspace = true

# Transport
reqwest.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# AI module (optional Vosk feature)
vosk = { version = "0.2", optional = true }

# Web3 / Blockchain (optional feature, enabled via `web3` feature)
ethers = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }
sha2 = { version = "0.10", optional = true }

# Ads module dependencies (always enabled)
# reqwest, sqlx, chrono, uuid already included via Transport dependencies
# Offline/Mesh: rand already in workspace deps

# IPFS/Pinata
mime_guess = "2.0"

# BLE (Bluetooth Low Energy) — optional, needs system Bluetooth
btleplug = { version = "0.11", optional = true }

# Tor — optional, for censorship circumvention

[build-dependencies]
tauri-build.workspace = true

[[bin]]
name = "secure-messenger"
path = "src/main.rs"

[lib]
name = "secure_messenger_lib"

[features]
default = ["tauri-commands"]
vosk-local = ["dep:vosk"]
web3 = ["dep:ethers", "dep:alloy-primitives", "dep:sha2"]
tauri-commands = []
