[package]
name = "secure-messenger-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Axum backend server for Secure Telegram Client"

[dependencies]
axum = { workspace = true, features = ["ws", "multipart"] }
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
sqlx.workspace = true
redis.workspace = true
reqwest.workspace = true
futures = "0.3"
dotenv = "0.15"
mime_guess = "2.0"
sha2.workspace = true
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper", "checkout"] }

# Crypto
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
zeroize.workspace = true
rand.workspace = true
base64.workspace = true
arrayref = "0.3.6"

# Enterprise features
sha3 = "0.10"
hex = "0.4"
# Auth
jsonwebtoken = "9.3"
bcrypt = "0.15"

[[bin]]
name = "secure-messenger-server"
path = "src/main.rs"
