[package]
name = "secure-messenger-core"
version = "0.2.0"
edition = "2021"
authors = ["Secure Messenger Team"]
description = "Core library for Secure Messenger Android"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "secure_messenger_core"

[features]
# Полные зависимости будут добавлены позже
# obfuscation = ["dep:pqcrypto-kyber", "dep:chacha20poly1305"]

[dependencies]
# JNI
jni = "0.21"

# Crypto (базовые)
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
